--- a/src/pages/Homecopy.css
+++ b/src/pages/Homecopy.css
@@ -9,6 +9,26 @@
   /* padding: 0 20px 0 0; */
 }
 
+.dateviewshomejs {
+  display: flex;
+  align-items: center;
+  /* Asigură alinierea pe verticală */
+  gap: 10px;
+}
+
+.datee,
+.viewss {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  color: var(--small-p-text);
+}
+
+
+
 .blog {
   font-family: sans-serif;
   max-width: 960px;
@@ -33,13 +53,14 @@
   align-items: center;
   /* Aliniază pe orizontală */
   /* margin: 0 auto; */
+
 }
 
 .blog-post {
   max-width: 90%;
 }
 
-.blog-post hr {
+.blog-post .hrpostjs {
   width: 90%;
   margin: 20px auto;
   /* Centrare și spațiere verticală */
@@ -83,7 +104,7 @@
   margin-top: 0;
   /* margin-left: 5%; */
   max-width: fit-content;
-  color: var(--htwo);
+  color: var(--title-h-color);
 }
 
 .blog-post .post-title:hover {
