Comment Section + reply form

--- a/src/App.css
+++ b/src/App.css
@@ -27,5 +27,6 @@ body {
   --accent-color: #ffc107;
   --title-h-color: #ff6c47;
   --small-p-text: #999;
+  --replybackground: #632d20;
   /* Variabilă pentru o culoare de accent (exemplu) */
 }
