--- a/src/App.css
+++ b/src/App.css
@@ -28,5 +28,6 @@ body {
   --title-h-color: #ff6c47;
   --small-p-text: #999;
   --replybackground: #632d20;
+  --textareabackground: #222222;
   /* Variabilă pentru o culoare de accent (exemplu) */
 }
