--- a/src/components/CommentSection.css
+++ b/src/components/CommentSection.css
@@ -59,8 +59,8 @@
     color: var(--text-color);
     margin-top: 15px;
     margin-bottom: 15px;
-    font-size: 14px;
-
+    font-size: 15px;
+    font-weight: 600;
 }
 
 .likebtn {
@@ -182,7 +182,8 @@
     color: var(--text-color);
     margin-top: 15px;
     margin-bottom: 15px;
-    font-size: 14px;
+    font-size: 15px;
+    font-weight: 900;
 
 }
 
