--- a/src/components/FormComment.css
+++ b/src/components/FormComment.css
@@ -24,17 +24,32 @@
     margin-bottom: 5px;
 }
 
+.form-input {
+    background-color: var(--textareabackground);
+    margin: 5px 0 5px 0;
+    border: none;
+    border-radius: 0;
+    color: var(--text-color)
+}
+
 .form-input,
 .form-textarea {
     width: 100%;
     padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    /* border: 1px solid #ccc; */
+    border-radius: 1px;
+    border: none;
+
 }
 
 .form-textarea {
     height: 100px;
     resize: vertical;
+    background-color: var(--textareabackground);
+    margin: 5px 0 5px 0;
+    border: none;
+    border-radius: 0;
+    color: var(--text-color)
 }
 
 .form-button {
@@ -47,4 +62,12 @@
 
 .form-button:hover {
     background-color: darkblue;
+}
+
+.form-input:focus,
+.form-textarea:focus {
+    outline: none;
+    border-color: transparent;
+    /* Poți seta și altă culoare dacă vrei */
+    box-shadow: none;
 }
